# GymAuslastung

./: .activate.sh  README.md  pyproject.toml  requirements.txt  setup.sh
src/data/: collect_data.py
